--- a/form-results.html
+++ b/form-results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms & Data Analysis</title>
+    <title>Admin - Data Analysis</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -23,18 +23,11 @@
         h1 {
             color: #003366; /* Dark blue */
         }
-        .list-group-item {
-            background-color: #f8f9fa;
-            border: 1px solid #003366;
-            color: #003366;
-            font-weight: bold;
+        .container {
+            margin-top: 50px;
         }
-        .list-group-item a {
-            color: #003366;
-            text-decoration: none;
-        }
-        .list-group-item a:hover {
-            color: #8cc63f; /* Green on hover */
+        .locked {
+            display: none;
         }
     </style>
 </head>
@@ -54,33 +47,43 @@
                     <li class="nav-item">
                         <a class="nav-link" href="data-analysis.html">Data Analysis</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="form-results.html">Form Results</a>
-                    </li> <!-- New Form Results link -->
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <div class="container mt-5">
-        <h1>Welcome to the Forms Page</h1>
-        <p>Select a form below to fill out:</p>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="https://forms.gle/tTUo3GgnmvsN5Qe26" target="_blank">2024 HRP Applicant Interest Form</a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://forms.gle/w7qNixtiomPsPXrN8" target="_blank">CalHome 2024-2025 HPP Application</a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://forms.gle/nFwMdsaEHsdMaPRh6" target="_blank">HPP Exit Survey</a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://forms.gle/hcSdB7DV2sNJheUK6" target="_blank">Application Upload Form</a>
-            </li>
-        </ul>
+    <!-- Admin Access Section -->
+    <div class="container">
+        <h1>Admin Access - Data Analysis</h1>
+        <p>Please enter the admin password to view the data:</p>
+
+        <!-- Password Input -->
+        <div class="mb-3">
+            <input type="password" id="adminPassword" class="form-control" placeholder="Enter Admin Password">
+        </div>
+        <button class="btn btn-primary" onclick="checkPassword()">Submit</button>
+
+        <!-- Locked Content: Google Sheets -->
+        <div class="locked mt-5" id="lockedContent">
+            <h2>Google Sheets Data</h2>
+            <iframe src="https://docs.google.com/spreadsheets/d/1QWrK1tBz0xSJVJuGL6szlhQvy_hRFOjN-_oFEOIBGPg/edit?usp=sharing" 
+                    width="100%" height="600px"></iframe>
+        </div>
     </div>
+
+    <!-- JavaScript for Access Control -->
+    <script>
+        function checkPassword() {
+            const enteredPassword = document.getElementById('adminPassword').value;
+            const correctPassword = 'sgvhabitat'; // Set the actual password you want
+
+            if (enteredPassword === correctPassword) {
+                document.getElementById('lockedContent').style.display = 'block';
+            } else {
+                alert('Incorrect password. Access denied.');
+            }
+        }
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
