--- a/data-analysis.html
+++ b/data-analysis.html
@@ -2,42 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Data Correlation Analyzer</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live Looker Studio Report</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            background-color: #f8f9fa;
+            font-family: 'Arial', sans-serif;
         }
-        #upload-section {
-            margin-bottom: 20px;
+        .navbar {
+            background-color: #003366;
         }
-        #charts {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
+        .navbar-brand, .nav-link {
+            color: white !important;
         }
-        .chart {
-            width: 45%;
-            min-width: 300px;
+        h1 {
+            color: #003366;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        iframe {
+            width: 100%;
+            height: 800px;
+            border: none;
         }
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Forms & Data Analysis</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Forms</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="data-analysis.html">Data Analysis</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <h1>Data Correlation Analyzer</h1>
+    <!-- Main Content -->
+    <div class="container">
+        <h1>Live Looker Studio Report</h1>
+        <p>This is a live embed of the report from Looker Studio. It updates in real-time based on the data in your Google Sheets.</p>
 
-    <div id="upload-section">
-        <input type="file" id="csvFile" accept=".csv" />
-        <button onclick="processData()">Analyze Data</button>
+        <!-- Embedded Google Looker Studio Report -->
+        <iframe src="https://lookerstudio.google.com/embed/reporting/a61c353e-4b30-468c-8f56-c1a188df41a4/page/1M" allowfullscreen></iframe>
     </div>
 
-    <div id="charts">
-        <div id="heatmap" class="chart"></div>
-        <div id="barChart" class="chart"></div>
-        <div id="scatterPlot" class="chart"></div>
-    </div>
-
-    <script src="script.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
