--- a/data-analysis.html
+++ b/data-analysis.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Forms</a>
+                        <a class="nav-link" href="mainPage.html">Forms</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="data-analysis.html">Data Analysis</a>
